<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="menu_help">Help</string>
  <string name="menu_home">Home</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_search_in_text">Find in page</string>
  <string name="bookmarks">Bookmarks</string>
  <string name="menu_random_page">Random page</string>
  <string name="menu_read_aloud">Read aloud</string>
  <string name="menu_read_aloud_stop">Stop reading aloud</string>
  <string name="menu_support_kiwix">Support Kiwix</string>
  <string name="menu_support_kiwix_for_custom_apps">Support %s</string>
  <string name="menu_about_app">About %s app</string>
  <string name="external_redirect_message">You will now be redirected to our %s.</string>
  <string name="support_donation_platform">donation platform</string>
  <string name="about_app_page">about app page</string>
  <string name="menu_wifi_hotspot">WiFi Hotspot</string>
  <string name="save_media">Save Media</string>
  <string name="save_media_error">An error occurred when trying to save the media!</string>
  <string name="invalid_media_source">The selected media is not found.</string>
  <string name="save_media_saved">Saved media to %s</string>
  <string name="search_label">Search</string>
  <string name="searched_list">Searched list</string>
  <string name="more_options">More options</string>
  <string name="choose_file" tools:keep="@string/choose_file">Select a Content File (*.zim)</string>
  <string name="open_in_new_tab">Open link in new tab?</string>
  <string name="hotspot_service_channel_name" tools:keep="@string/hotspot_service_channel_name">Hotspot Service Channel</string>
  <string name="hotspot_failed_title">Failed to start hotspot</string>
  <string name="hotspot_failed_message">It seems like your hotspot is already turned on. Please disable your wifi hotspot to continue.</string>
  <string name="go_to_wifi_settings_label">Go to WIFI settings</string>
  <string name="connection_refused">Connection refused.</string>
  <string name="hotspot_running" tools:keep="@string/hotspot_running">Running Hotspot</string>
  <string name="no_books_selected_toast_message" tools:keep="@string/no_books_selected_toast_message">Please select books first</string>
  <string name="server_failed_message" tools:keep="@string/server_failed_message">Couldn’t start server. Please turn on your hotspot</string>
  <string name="server_failed_toast_message" tools:keep="@string/server_failed_toast_message">Couldn’t start server.</string>
  <string name="server_started_successfully_toast_message" tools:keep="@string/server_started_successfully_toast_message">Server started successfully.</string>
  <string name="server_stopped_successfully_toast_message" tools:keep="@string/server_stopped_successfully_toast_message">Server stopped successfully.</string>
  <string name="server_stopped_all_books_deleted_toast_message" tools:keep="@string/server_stopped_all_books_deleted_toast_message">Server stopped: all hosted books were deleted.</string>
  <string name="hotspot_turned_on">Hotspot turned on</string>
  <string name="hotspot_details_message">Following are the details of your local hotspot. \nSSID : %1$s \nPass : %2$s</string>
  <string name="server_textview_default_message" tools:keep="@string/server_textview_default_message">Select the files you wish to host on the server</string>
  <string name="progress_dialog_starting_server" tools:keep="@string/progress_dialog_starting_server">Starting server</string>
  <string name="hotspot_dialog_title">Instructions for hosting books</string>
  <string name="wifi_dialog_title">WiFi connection detected</string>
  <string name="wifi_dialog_body">In order to view books on other devices, please ensure that all devices are connected to the same WiFi Network.</string>
  <string name="hotspot_dialog_message">In order for this feature to work you need to first turn on your WIFI hotspot manually or ensure that the host device and receiver device are on the same WiFi network</string>
  <string name="hotspot_dialog_neutral_button">PROCEED</string>
  <string name="hotspot_channel_description" tools:keep="@string/hotspot_channel_description">Updates about the state of your hotspot/server.</string>
  <string name="hotspot_notification_content_title" tools:keep="@string/hotspot_notification_content_title">Kiwix Hotspot</string>
  <string name="start_server_label" tools:keep="@string/start_server_label">Start server</string>
  <string name="stop_server_label" tools:keep="@string/stop_server_label">Stop server</string>
  <string name="error_server_already_running" tools:keep="@string/error_server_already_running">The server is already running. Please turn it off and try again.</string>
  <string name="error_ip_address_not_found">Couldn’t find IP address.</string>
  <string name="server_started_message" tools:keep="@string/server_started_message">Enter this IP address into your browser to access the server %s</string>
  <string name="qr_code">Rendered QR Code</string>
  <string name="share_host_address">Share URL via other applications</string>
  <string name="error_file_not_found">Error: The selected ZIM file could not be found. %s</string>
  <string name="unable_to_read_zim_file">Unable to read this ZIM file!</string>
  <string name="zim_not_opened">Unable to open ZIM file</string>
  <string name="error_file_invalid">Error: The selected file is not a valid ZIM file. %s</string>
  <string name="error_article_url_not_found">Error: Loading article (Url: %1$s) failed.</string>
  <string name="error_loading_random_page_zim_not_loaded">Unable to load page. The ZIM file is not properly loaded.</string>
  <string name="could_not_find_random_page">Unable to find a random page. Please try again later.</string>
  <string name="pref_display_title">Display</string>
  <string name="pref_info_title">Information</string>
  <string name="pref_info_version">Version</string>
  <string name="pref_theme">Theme</string>
  <string name="theme_system">System</string>
  <string name="theme_light">Light</string>
  <string name="theme_dark">Dark</string>
  <string name="pref_back_to_top">Back to Top</string>
  <string name="pref_back_to_top_summary">Display a button at the end of the page to scroll up to the top</string>
  <string name="pref_disable_animations">Disable animations</string>
  <string name="pref_disable_animations_summary">Turn off animated effects such as the pulsing back-to-top button, useful on e-ink displays</string>
  <string name="pref_language_title">Language</string>
  <string name="user_interface">User Interface</string>
  <string name="system_language_with_name">System language (%s)</string>
  <string name="pref_language_chooser">Choose a language</string>
  <string name="pref_credits">Contributors and Licenses</string>
  <string name="pref_credits_title">Credits</string>
  <string name="tts_lang_not_supported">The language of this page is not supported. The article may not be properly read.</string>
  <string name="no_reader_application_installed">Could not find an installed application for this type of file</string>
  <string name="no_email_application_installed">Please install an email client</string>
  <string name="no_app_found_to_select_bookmark_file">No app found to select a bookmark file</string>
  <string name="no_section_info">No Content Headers Found</string>
  <string name="request_storage">To access offline content we need access to your storage</string>
  <string name="request_write_storage">To download ZIM files we need write access to your storage</string>
  <string name="clear_recent_and_tabs_history_dialog">Are you sure you want to delete your search history and reset all active tabs?</string>
  <string name="delete_recent_search_item">Delete this item?</string>
  <string name="pref_clear_all_history_title">Clear history</string>
  <string name="pref_clear_all_history_summary">Clear recent searches and tabs history</string>
  <string name="pref_notes">Notes</string>
  <string name="pref_permission">Permissions</string>
  <string name="pref_import_bookmark_title">Import Bookmarks</string>
  <string name="pref_import_bookmark_summary">Import the saved bookmarks</string>
  <string name="pref_export_bookmark_title">Export Bookmarks</string>
  <string name="pref_export_bookmark_summary">Export all saved bookmarks</string>
  <string name="export_bookmark_saved">Bookmarks are exported in %s file</string>
  <string name="all_history_cleared">All History Cleared</string>
  <string name="pref_clear_all_bookmarks_title">Clear bookmarks</string>
  <string name="clear_all_history_dialog_title">Clear All History?</string>
  <string name="share">Share</string>
  <string name="share_article">Share article</string>
  <string name="unable_to_share_article">Unable to share article</string>
  <string name="please_wait_for_page_to_load">Please wait for the page to fully load</string>
  <string name="selected_file_cab_app_chooser_title" tools:keep="@string/selected_file_cab_app_chooser_title">Share ZIM files with:</string>
  <string name="delete">Delete</string>
  <string name="cancel">Cancel</string>
  <string name="delete_specific_search_toast">Recent search removed</string>
  <string name="hint_contents_drawer_message">You can swipe left to view the contents of this article</string>
  <string name="got_it">Got it</string>
  <string name="did_you_know">Did you know?</string>
  <string name="undo">Undo</string>
  <string name="tab_closed">Tab closed</string>
  <string name="tabs_closed">Tabs closed</string>
  <string name="no_thanks">No, thanks</string>
  <string name="rate_dialog_neutral">Later</string>
  <string name="pref_newtab_background_title">Open new tab in background</string>
  <string name="pref_newtab_background_summary">When opening a new tab it will open in background</string>
  <string name="pref_extras">Extras</string>
  <string name="help_2">What does Kiwix do?</string>
  <string name="help_3">Kiwix is an offline content reader. It acts very much like a browser but instead of accessing online web pages, it reads content from a file in ZIM format.</string>
  <string name="pref_storage">Storage</string>
  <string name="pref_current_folder">Current Folder</string>
  <string name="pref_wifi_only">Download content only via WiFi</string>
  <string name="pref_external_link_popup_title">Warn when opening external links</string>
  <string name="pref_external_link_popup_summary">Display popup to warn about additional costs or not working in offline links.</string>
  <string name="crash_title">Well… This is Embarrassing</string>
  <string name="crash_description">It looks like we crashed.\n\nWould you mind helping us fix this problem by sending the crash report?</string>
  <string name="crash_checkbox_language">Your Language Settings</string>
  <string name="crash_checkbox_zimfiles">A List of Your ZIM Files</string>
  <string name="crash_checkbox_exception">Details of The Crash</string>
  <string name="crash_checkbox_logs">Application Logs</string>
  <string name="crash_checkbox_device">Device Details</string>
  <string name="crash_button_confirm">SEND DETAILS</string>
  <string name="go_to_previous_page">Go to previous page</string>
  <string name="go_to_next_page">Go to next page</string>
  <string name="table_of_contents">Table of contents</string>
  <string name="expand">Expand</string>
  <string name="history">History</string>
  <string name="pref_clear_all_notes_summary">Clears all notes on all articles</string>
  <string name="pref_clear_all_notes_title">Clear all notes</string>
  <string name="tag_pic">Pic</string>
  <string name="tag_vid">Vid</string>
  <string name="tag_text_only">Text Only</string>
  <string name="crash_checkbox_file_system">File System Details</string>
  <string name="donation_dialog_title">Donate Today</string>
  <string name="donation_dialog_description">%s needs your help.</string>
  <string name="make_donation">Make a donation</string>
</resources>