<!--
  ~ Kiwix Android
  ~ Copyright (c) 2019 Kiwix <android.kiwix.org>
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:key="pref_display"
    android:title="@string/pref_display_title">

    <org.kiwix.kiwixmobile.settings.CustomSwitchPreference
      android:defaultValue="false"
      android:key="pref_nightmode"
      android:summary="@string/pref_night_mode_summary"
      android:title="@string/pref_night_mode" />

    <org.kiwix.kiwixmobile.settings.CustomSwitchPreference
      android:defaultValue="false"
      android:key="pref_auto_nightmode"
      android:summary="@string/pref_auto_night_mode_summary"
      android:title="@string/pref_auto_night_mode" />

    <org.kiwix.kiwixmobile.settings.CustomSwitchPreference
      android:defaultValue="false"
      android:key="pref_backtotop"
      android:summary="@string/pref_back_to_top_summary"
      android:title="@string/pref_back_to_top" />

    <org.kiwix.kiwixmobile.settings.CustomSwitchPreference
      android:defaultValue="false"
      android:key="pref_hidetoolbar"
      android:summary="@string/pref_hide_toolbar_summary"
      android:title="@string/pref_hide_toolbar" />


  </PreferenceCategory>

  <PreferenceCategory
    android:key="pref_extras"
    android:title="@string/pref_extras">

    <org.kiwix.kiwixmobile.settings.CustomSwitchPreference
      android:defaultValue="false"
      android:key="pref_newtab_background"
      android:summary="@string/pref_newtab_background_summary"
      android:title="@string/pref_newtab_background_title" />

    <org.kiwix.kiwixmobile.settings.CustomSwitchPreference
      android:defaultValue="true"
      android:key="pref_external_link_popup"
      android:summary="@string/pref_external_link_popup_summary"
      android:title="@string/pref_external_link_popup_title" />

    <!--
    Disabled for 2.4
    <org.kiwix.kiwixmobile.settings.CustomSwitchPreference
      android:defaultValue="false"
      android:key="pref_full_text_search"
      android:summary="@string/pref_multi_search_summary"
      android:title="@string/pref_multi_search_title" />
      -->


    <org.kiwix.kiwixmobile.settings.CustomSwitchPreference
      android:defaultValue="true"
      android:key="pref_wifi_only"
      android:summary="@string/pref_wifi_only"
      android:title="@string/pref_wifi_only" />
  </PreferenceCategory>

  <PreferenceCategory
    android:key="pref_storage"
    android:title="@string/pref_storage">

    <Preference
      android:key="pref_select_folder"
      android:title="@string/pref_current_folder" />

  </PreferenceCategory>

  <PreferenceCategory
    android:key="pref_zoom_sub"
    android:title="@string/pref_zoom_sub_title">

    <org.kiwix.kiwixmobile.settings.CustomSwitchPreference
      android:defaultValue="false"
      android:key="pref_zoom_enabled"

      android:title="@string/pref_zoom_enable" />

    <org.kiwix.kiwixmobile.settings.SliderPreference
      android:defaultValue="250.0"
      android:dialogMessage="0"
      android:enabled="false"
      android:key="pref_zoom_slider"
      android:summary="@array/pref_zoom_entryvalues"
      android:title="@string/pref_zoom_dialog" />
  </PreferenceCategory>

  <PreferenceCategory
    android:key="pref_history"
    android:title="History">

    <Preference
      android:key="pref_clear_all_history"
      android:summary="@string/pref_clear_all_history_summary"
      android:title="@string/pref_clear_all_history_title" />

  </PreferenceCategory>
  <PreferenceCategory
    android:key="pref_notes"
    android:title="Notes">

    <Preference
      android:key="pref_clear_all_notes"
      android:summary="@string/pref_clear_all_notes_summary"
      android:title="@string/pref_clear_all_notes_title" />

  </PreferenceCategory>
  <PreferenceCategory
    android:key="pref_language"
    android:title="@string/pref_language_title">

    <ListPreference
      android:key="pref_language_chooser"
      android:summary="@string/pref_language_chooser"
      android:title="@string/pref_language_title" />

  </PreferenceCategory>

  <PreferenceCategory
    android:key="pref_info"
    android:title="@string/pref_info_title">

    <EditTextPreference
      android:enabled="false"
      android:key="pref_version"
      android:persistent="false"
      android:selectable="true"
      android:shouldDisableView="false"
      android:title="@string/pref_info_version" />

    <Preference
      android:key="pref_credits"
      android:summary="@string/pref_credits"
      android:title="@string/pref_credits_title" />

  </PreferenceCategory>

</PreferenceScreen>
