<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/menu_settings"
    android:title="@string/menu_settings"
    app:showAsAction="never" />
  <group android:id="@+id/group_book_related">
    <item
      android:id="@+id/menu_bookmarks_list"
      android:title="@string/bookmarks"
      app:showAsAction="never" />

    <item
      android:id="@+id/menu_history"
      android:title="@string/history"
      app:showAsAction="never" />

    <item
      android:id="@+id/menu_host_books"
      android:title="@string/menu_host_books"
      app:showAsAction="never" />
  </group>


  <group android:id="@+id/group_help_and_support">

    <item
      android:id="@+id/menu_help"
      android:title="@string/menu_help"
      app:showAsAction="never" />

    <item
      android:id="@+id/menu_support_kiwix"
      android:title="@string/menu_support_kiwix"
      app:showAsAction="never" />
  </group>

</menu>
