<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <group
    android:id="@+id/group_book_related"
    tools:ignore="UnusedIds">
    <item
      android:id="@+id/menu_bookmarks_list"
      android:icon="@drawable/ic_bookmark_black_24dp"
      android:title="@string/bookmarks"
      app:showAsAction="never" />

    <item
      android:id="@+id/menu_history"
      android:icon="@drawable/ic_history_24px"
      android:title="@string/history"
      app:showAsAction="never" />

    <item
      android:id="@+id/menu_host_books"
      android:icon="@drawable/ic_mobile_screen_share_24px"
      android:title="@string/menu_wifi_hotspot"
      app:showAsAction="never" />
  </group>

  <item
    android:id="@+id/menu_settings"
    android:icon="@drawable/ic_settings_24px"
    android:title="@string/menu_settings"
    app:showAsAction="never" />

  <group
    android:id="@+id/group_help_and_support"
    tools:ignore="UnusedIds">

    <item
      android:id="@+id/menu_help"
      android:icon="@drawable/ic_help_24px"
      android:title="@string/menu_help"
      app:showAsAction="never" />

    <item
      android:id="@+id/menu_support_kiwix"
      android:icon="@drawable/ic_support_24px"
      android:title="@string/menu_support_kiwix"
      app:showAsAction="never" />
  </group>

</menu>
