<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/holo_blue_dark"
  tools:context=".error.ErrorActivity"
  tools:ignore="Overdraw">

  <TextView
    android:id="@+id/messageText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/crash_description"
    android:textAlignment="center"
    android:textColor="@color/alabaster_white"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <Button
    android:id="@+id/reportButton"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="32dp"
    android:background="@color/alabaster_white"
    android:text="@string/crash_button_confirm"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/restartButton"
    app:layout_constraintHorizontal_bias="0.173"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/restartButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="32dp"
    android:text="@string/no_thanks"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.769"
    app:layout_constraintStart_toEndOf="@+id/reportButton" />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="60dp"
    android:layout_marginEnd="8dp"
    android:text="@string/crash_title"
    android:textColor="@color/alabaster_white"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.505"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/imageView2"
    android:layout_width="0dp"
    android:layout_height="70dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="8dp"
    android:src="@mipmap/ic_launcher"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="17dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/reportButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/messageText">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <CheckBox
        android:id="@+id/allowLanguage"
        style="@android:style/Widget.Holo.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/crash_checkbox_language"
        android:textColor="@color/alabaster_white" />

      <CheckBox
        android:id="@+id/allowLogs"
        style="@android:style/Widget.Holo.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/crash_checkbox_logs"
        android:textColor="@color/alabaster_white" />

      <CheckBox
        android:id="@+id/allowCrash"
        style="@android:style/Widget.Holo.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/crash_checkbox_exception"
        android:textColor="@color/alabaster_white" />

      <CheckBox
        android:id="@+id/allowZims"
        style="@android:style/Widget.Holo.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/crash_checkbox_zimfiles"
        android:textColor="@color/alabaster_white" />

      <CheckBox
        android:id="@+id/allowDeviceDetails"
        style="@android:style/Widget.Holo.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/crash_checkbox_device"
        android:textColor="@color/alabaster_white" />

      <CheckBox
        android:id="@+id/allowFileSystemDetails"
        style="@android:style/Widget.Holo.CompoundButton.CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/crash_checkbox_file_system"
        android:textColor="@color/alabaster_white" />
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
