<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.bottomappbar.BottomAppBar xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/bottom_toolbar"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_gravity="bottom"
  android:backgroundTint="@color/black"
  android:padding="8dp"
  app:hideOnScroll="true">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
      android:id="@+id/bottom_toolbar_bookmark"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:contentDescription="@string/bookmarks"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/bottom_toolbar_arrow_back"
      app:layout_constraintHorizontal_chainStyle="spread"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_bookmark_border_24dp" />

    <ImageView
      android:id="@+id/bottom_toolbar_arrow_back"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:contentDescription="@string/go_to_previous_page"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/bottom_toolbar_home"
      app:layout_constraintStart_toEndOf="@id/bottom_toolbar_bookmark"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_keyboard_arrow_left_24dp" />

    <ImageView
      android:id="@+id/bottom_toolbar_home"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:contentDescription="@string/menu_home"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/bottom_toolbar_arrow_forward"
      app:layout_constraintStart_toEndOf="@id/bottom_toolbar_arrow_back"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/action_home" />

    <ImageView
      android:id="@+id/bottom_toolbar_arrow_forward"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:contentDescription="@string/go_to_next_page"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/bottom_toolbar_toc"
      app:layout_constraintStart_toEndOf="@id/bottom_toolbar_home"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_keyboard_arrow_right_24dp" />

    <ImageView
      android:id="@+id/bottom_toolbar_toc"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:contentDescription="@string/table_of_contents"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/bottom_toolbar_arrow_forward"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_toc_24dp" />
  </androidx.constraintlayout.widget.ConstraintLayout>
  <!--  </LinearLayout>-->


</com.google.android.material.bottomappbar.BottomAppBar>
