<?xml version="1.0" encoding="utf-8"?><!--
  ~ Kiwix Android
  ~ Copyright (c) 2024 Kiwix <android.kiwix.org>
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  style="@style/ThemeOverlay.MaterialComponents.Dialog.Alert"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="16dp"
  android:padding="16dp"
  app:cardCornerRadius="12dp"
  app:cardElevation="6dp">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/heart_icon"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_alignParentStart="true"
      android:layout_margin="@dimen/activity_horizontal_margin"
      android:layout_marginEnd="12dp"
      android:contentDescription="@string/donation_dialog_title"
      android:src="@drawable/ic_donation_icon"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/titleText"
      style="@style/TextAppearance.M3.Sys.Typescale.TitleMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/fullscreen_control_button_margin"
      android:text="@string/donation_dialog_title"
      android:textSize="16sp"
      app:layout_constraintStart_toEndOf="@id/heart_icon"
      app:layout_constraintTop_toTopOf="@+id/heart_icon" />

    <TextView
      android:id="@+id/descriptionText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:text="@string/donation_dialog_description"
      android:textSize="14sp"
      app:layout_constraintStart_toStartOf="@id/titleText"
      app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
      android:id="@+id/laterButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/activity_horizontal_margin"
      android:text="@string/rate_dialog_neutral"
      android:textColor="?attr/colorPrimary"
      app:layout_constraintEnd_toStartOf="@+id/donateButton"
      app:layout_constraintTop_toBottomOf="@id/descriptionText" />

    <TextView
      android:id="@+id/donateButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/activity_horizontal_margin"
      android:text="@string/make_donation"
      android:textColor="?attr/colorPrimary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/descriptionText" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

